# web_browser_agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  streamlit_app.py
src/web_nav_agent/: __init__.py  agent.py  browser.py  chatbot.py  llm_adapter.py  schemas.py  utils.py
tests/: test_agent.py  test_browser.py  test_chatbot.py  test_llm_adapter.py  test_main.py  test_schemas.py  test_utils.py
